@@ -1,3 +1,8 @@
+2011-07-13  Michael Albinus  <michael.albinus@gmx.de>
+
+	* debbugs.el (debbugs-get-bugs): Extend syntax for packages (and
+	severities and tags) by "-".  Fix error messages.
+
 2011-07-12  Michael Albinus  <michael.albinus@gmx.de>
 
 	* debbugs-gnu.el (debbugs-gnu-get-bugs): Reinsert sorting of ids.
